ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-cache
  namespace: cker-endpoint
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: cdn.cker.ir
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-cache
          servicePort: 80
  tls:
  - hosts:
    - cdn.cker.ir
    secretName: cker-wildcard
